# doge-tries-rust

./: Cargo.toml  example.toml
src/: main.rs
