[package]
name = "rust-cli-exploration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
astra_formats = { git = "https://github.com/thane98/astra-formats" }
